public interface Product extends Cloneable{
    public void print();
    public Product clone();
    public Product deepclone();
}
